--- a/src/Topxia/WebBundle/Resources/views/EsBar/ListContent/consult.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/EsBar/ListContent/consult.html.twig
@@ -58,7 +58,7 @@
         <p class="mtm"><i class="es-icon es-icon-accesstime mrm"></i>{{'工作时间：%worktime%'|trans({'%worktime%': consult.worktime}) }}</p>
       {% endif %}
       {% for phone in consult.phone if phone.name is not empty %}
-        <p class="mtm"><i class="es-icon es-icon-phone mrm"></i>{{'%name%:%number%'|trans({'%name%': phone.name,'%number%': phone.number}) }}</p>
+        <p class="mtm"><i class="es-icon es-icon-phone mrm"></i>{{ phone.name }}:{{ phone.number }}</p>
       {% endfor %}
       {% if consult.email is not empty %}
         <p class="mtm"><i class="es-icon es-icon-mail mrm"></i>{{'邮箱：'|trans}} <a class="link-light" href="mailto:{{consult.email}}">{{consult.email}}</a></p>
