--- a/src/Topxia/WebBundle/Resources/views/EsBar/ListContent/study-place.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/EsBar/ListContent/study-place.html.twig
@@ -10,7 +10,7 @@
       <a href="javascript:;" data-url="{{ path('esbar_my_course') }}" class="btn btn-primary {% if esBarMenu|default('') != 'classroom' %}active{% endif %}"
          id="bar-course-btn">{{'课程'|trans}}</a>
       <a href="javascript:;" data-url="{{ path('esbar_my_classroom' ) }}" class="btn btn-primary {% if esBarMenu|default('') == 'classroom' %}active{% endif %}"
-         id="bar-classroom-btn">{{'%name%'|trans({'%name%': setting('classroom.name')|default('班级'|trans)}) }}</a>
+         id="bar-classroom-btn">{{ setting('classroom.name')|default('班级'|trans) }}</a>
     </div>
   </div>
 
