--- a/src/Topxia/WebBundle/Resources/views/EsBar/ListContent/StudyCenter/study-mission.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/EsBar/ListContent/StudyCenter/study-mission.html.twig
@@ -17,7 +17,7 @@
     <div class="bar-task">
       <div class="bar-task-header">
         <div class="title">
-          {{'%name%:%title%'|trans({'%name%': setting('classroom.name')|default('班级'|trans),'%title%': classroom}) }}
+          {{ setting('classroom.name')|default('班级'|trans) }}:{{ classroom }}
           {% if classroomPlan|default(null) and classroomPlan.status == 'published' and userPlanTaskNumInfo|default(null) %}
             <span>{{ userPlanTaskNumInfo.allDoneNum ~ '/' ~ userPlanTaskNumInfo.tasksNum }}</span>
           {% else %}
