--- a/src/Org/OrgBundle/Resources/views/Org/batch-update-org-modal.html.twig
+++ b/src/Org/OrgBundle/Resources/views/Org/batch-update-org-modal.html.twig
@@ -2,7 +2,7 @@
 
 {% set modalSize = 'large' %}
 
-{% block title %}设置组织机构{% endblock %}
+{% block title %}{{ '设置组织机构'|trans }}{% endblock %}
 {% block body %}
 
   <form id="batch-setting-org-form" class="form-horizontal" method="post" action="{{ path('admin_batch_update_org',{module: module}) }}">
@@ -16,9 +16,9 @@
 {% endblock %}
 
 {% block footer %}
-  <button id="batch-setting-org-btn" data-submiting-text="正在提交" type="submit" class="btn btn-primary pull-right"
-          data-toggle="form-submit" data-target="#batch-setting-org-form">提交
+  <button id="batch-setting-org-btn" data-submiting-text="{{ '正在提交'|trans }}" type="submit" class="btn btn-primary pull-right"
+          data-toggle="form-submit" data-target="#batch-setting-org-form">{{ '提交'|trans }}
   </button>
-  <button type="button" class="btn btn-link pull-right" data-dismiss="modal">取消</button>
+  <button type="button" class="btn btn-link pull-right" data-dismiss="modal">{{ '取消'|trans }}</button>
   <script>app.load('orgbundle/controller/org/batch-org-modal')</script>
 {% endblock %}
