--- a/src/Topxia/WebBundle/Resources/views/Article/Part/detail-breadcrumb.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Article/Part/detail-breadcrumb.html.twig
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-  <li><a href="{{path('article_show')}}">{{ '%name%'|trans({'%name%': article.name|default('资讯频道'|trans)}) }}</a></li>
+  <li><a href="{{path('article_show')}}">{{ article.name|default('资讯频道'|trans) }}</a></li>
   {% for breadcrumb in breadcrumbs %}
     <li><a href="{{path('article_category',{categoryCode:breadcrumb.code})}}">{{breadcrumb.name}}</a></li>
   {% endfor %}
