--- a/src/Topxia/WebBundle/Resources/views/Article/list-articles-by-tag.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Article/list-articles-by-tag.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaWebBundle::layout.html.twig' %}
 
-{% block title %}{{ '%name%'|trans ({'%name%': article.name|default('资讯频道'|trans)}) }} - {{ parent() }}{% endblock %}
+{% block title %}{{ article.name|default('资讯频道'|trans) }} - {{ parent() }}{% endblock %}
 
 {% set bodyClass = 'artcile-tag-page' %}
 
