--- a/src/Topxia/WebBundle/Resources/views/Course/course-select-list.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/course-select-list.html.twig
@@ -42,7 +42,7 @@
 
         {% if setting('course.show_student_num_enabled', '1') == 1 %}
           <span class="divider"></span>
-          <span class="text-muted mrm mls"><strong>{{ course.studentNum }}</strong>{{'%user_name%'|trans({'%user_name%': default.user_name|default('学员'|trans)})}}</span>
+          <span class="text-muted mrm mls"><strong>{{ course.studentNum }}</strong>{{ default.user_name|default('学员'|trans) }}</span>
         {% endif %}
 
         </div>
@@ -67,7 +67,7 @@
         {% set lesson = course.lesson|default(null) %}
         {% if lesson %}
           <div class="live-course-lesson mbm">
-            <span class="text-success fsm mrm">{{'%startTime%'|trans({'%startTime%': lesson.startTime|date('n月j日 H:i'|trans)}) }} ~ {{ lesson.endTime|date('H:i') }}</span>
+            <span class="text-success fsm mrm">{{ lesson.startTime|date('n月j日 H:i'|trans) }} ~ {{ lesson.endTime|date('n月j日 H:i'|trans) }}</span>
             <span class="text-muted fsm mrm">{{'第%number%课时'|trans({'%number%': lessom.number})}}</span>
           </div>
         {% endif %}
