--- a/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/show.html.twig
@@ -83,7 +83,7 @@
         <div class="form-group">
           <div class="total-price">
             {{'应付金额：'|trans}}
-            <span role="pay-rmb" class="pay-rmb">{{'￥'|trans}}{{order.amount}}</span>
+            <span role="pay-rmb" class="pay-rmb">￥{{order.amount}}</span>
           </div>
         </div>
         <div class="form-group text-right">
