--- a/src/Topxia/WebBundle/Resources/views/Course/members-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/members-modal.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaWebBundle::bootstrap-modal-layout.html.twig' %}
 {% set modalSize = 'large' %}
-{% block title %}{{'课程'|trans}}{% if setting('default.user_name') %}{{'%user_name%'|trans({'%user_name%': setting('default.user_name')|default('学员'|trans)})}}{% else %}{{'学员'|trans}}{% endif %}{% endblock %}
+{% block title %}{{'课程'|trans}}{% if setting('default.user_name') %}{{ setting('default.user_name')|default('学员'|trans) }}{% else %}{{'学员'|trans}}{% endif %}{% endblock %}
 {% set hide_footer = true %}
 {% block body %}
 
