--- a/src/Topxia/WebBundle/Resources/views/CourseManage/base.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseManage/base.html.twig
@@ -65,7 +65,7 @@
       {% endif %}
 
       <div class="form-group">
-        <label class="col-md-2 control-label" for="course_expiryDay">{% if setting('default.user_name') %}{{'%user_name%'|trans({'%user_name%': setting('default.user_name')|default('学员'|trans)})}}{% else %}{{'学员'|trans}}{% endif %}{{'有效期'|trans}}</label>
+        <label class="col-md-2 control-label" for="course_expiryDay">{% if setting('default.user_name') %}{{ setting('default.user_name')|default('学员'|trans) }}{% else %}{{'学员'|trans}}{% endif %}{{'有效期'|trans}}</label>
         <div class="col-md-8 controls">
           <input type="text" id="course_expiryDay" name="expiryDay" required="required" class="form-control width-input width-input-large" value="{{ course.expiryDay }}" > {{'天'|trans}}
           <div class="help-block">{{'设置该值后，%user_name%只能在有效期内进行课程的相关操作，统默认会在到期前10天提醒。该值为0，则不做此限制。'|trans({'%user_name%': setting('default.user_name')|default('学员'|trans)})}}</div>
