--- a/src/Topxia/WebBundle/Resources/views/CourseStudentManage/create-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseStudentManage/create-modal.html.twig
@@ -2,14 +2,14 @@
 
 {% set modalSize = 'large' %}
 
-{% block title %}{{'添加'|trans}}{% if setting('default.user_name') %}{{'%user_name%'|trans({'%user_name%': setting('default.user_name')|default('学员'|trans)})}}{% else %}{{'学员'|trans}}{% endif %}{% endblock %}
+{% block title %}{{'添加'|trans}}{% if setting('default.user_name') %}{{ setting('default.user_name')|default('学员'|trans) }}{% else %}{{'学员'|trans}}{% endif %}{% endblock %}
 {% block body %}
 
 <form id="student-create-form" class="form-horizontal" method="post" action="{{ path('course_manage_student_create', {id:course.id}) }}">
   {% if course.status == 'published' %}
   	<div class="row form-group">
       <div class="col-md-2 control-label">
-        <label for="student-nickname">{% if setting('default.user_name') %}{{'%user_name%'|trans({'%user_name%': setting('default.user_name')|default('学员'|trans)})}}{% else %}{{'学员'|trans}}{% endif %}</label>
+        <label for="student-nickname">{% if setting('default.user_name') %}{{ setting('default.user_name')|default('学员'|trans) }}{% else %}{{'学员'|trans}}{% endif %}</label>
       </div>
       <div class="col-md-7 controls">
         <input type="text" id="student-nickname" name="queryfield" class="form-control"
@@ -41,7 +41,7 @@
       </div>
     </div>
   {% else %}
-    <div class="empty">{{dict_text('courseStatus', course.status)}}{{'课程不能添加'|trans}}{% if setting('default.user_name') %}{{'%user_name%'|trans({'%user_name%': setting('default.user_name')|default('学员'|trans)})}}{% else %}{{'学员'|trans}}{% endif %}，{{'请课程发布后再添加。'|trans}}</div>
+    <div class="empty">{{dict_text('courseStatus', course.status)}}{{'课程不能添加'|trans}}{% if setting('default.user_name') %}{{ setting('default.user_name')|default('学员'|trans) }}{% else %}{{'学员'|trans}}{% endif %}，{{'请课程发布后再添加。'|trans}}</div>
   {% endif %}
 
   <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
@@ -52,7 +52,7 @@
 
 {% block footer %}
   {% if course.status == 'published' %}
-    <button id="student-create-form-submit" type="submit" class="btn btn-primary pull-right" data-toggle="form-submit" data-target="#student-create-form" data-submiting-text="{{'正在保存'|trans}}..." data-user="{{'%user_name%'|trans({'%user_name%': default.user_name|default('学员'|trans)})}}">{{'保存'|trans}}</button>
+    <button id="student-create-form-submit" type="submit" class="btn btn-primary pull-right" data-toggle="form-submit" data-target="#student-create-form" data-submiting-text="{{'正在保存'|trans}}..." data-user="{{ default.user_name|default('学员'|trans) }}">{{'保存'|trans}}</button>
   {% endif %}
   <button type="button" class="btn btn-link pull-right" data-dismiss="modal">{{'取消'|trans}}</button>
   <script>app.load('course-manage/student-create')</script>
