--- a/src/Topxia/WebBundle/Resources/views/CourseStudentManage/index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseStudentManage/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'TopxiaWebBundle:CourseManage:layout.html.twig' %}
 
 
-{% block title %}{% if setting('default.user_name') %}{{'%user_name%'|trans({'%user_name%': setting('default.user_name')|default('学员'|trans)})}}{% else %}{{'学员'|trans}}{% endif %}{{'管理'|trans}} - {{ parent() }}{% endblock %}
+{% block title %}{% if setting('default.user_name') %}{{ setting('default.user_name')|default('学员'|trans) }}{% else %}{{'学员'|trans}}{% endif %}{{'管理'|trans}} - {{ parent() }}{% endblock %}
 
 {% set side_nav = 'students' %}
 {% set script_controller = 'course-manage/students' %}
@@ -12,7 +12,7 @@
     {% if setting('default.user_name') %}{{setting('default.user_name')|default('学员'|trans)}}{% else %}{{'学员'|trans}}{% endif %}{{'管理'|trans}}
     {% if role == 'student'%}
     {% if app.user.isAdmin() or setting('course.teacher_export_student', false) %}
-      <a class="btn btn-info btn-sm pull-right mhs" href="{{ path('course_manage_student_export_csv', {id:course.id}) }}"><i class="glyphicon glyphicon-export"></i> {{'导出'|trans}}{% if setting('default.user_name') %}{{'%user_name%'|trans({'%user_name%': setting('default.user_name')|default('学员'|trans)})}}{% else %}{{'学员'|trans}}{% endif %}</a>
+      <a class="btn btn-info btn-sm pull-right mhs" href="{{ path('course_manage_student_export_csv', {id:course.id}) }}"><i class="glyphicon glyphicon-export"></i> {{'导出'|trans}}{% if setting('default.user_name') %}{{ setting('default.user_name')|default('学员'|trans) }}{% else %}{{'学员'|trans}}{% endif %}</a>
     {% endif %}
     {% if app.user.isAdmin() or isTeacherAuthManageStudent == 1 %}
       {% if course.status == 'published' %}
