--- a/src/Topxia/WebBundle/Resources/views/CourseStudentManage/tr.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseStudentManage/tr.html.twig
@@ -45,7 +45,7 @@
         {% endif %}
 
         {% if app.user.isAdmin() or  app.user.isTeacher() and  isTeacherAuthManageStudent == 1 %}
-          <li><a class="student-remove" href="javascript:;" data-url="{{path('course_manage_student_remove', {courseId:course.id, userId:user.id})}}" data-user="{{'%user_name%'|trans({'%user_name%': default.user_name|default('学员'|trans)})}}">{{'移除'|trans}}</a></li>
+          <li><a class="student-remove" href="javascript:;" data-url="{{path('course_manage_student_remove', {courseId:course.id, userId:user.id})}}" data-user="{{ default.user_name|default('学员'|trans) }}">{{'移除'|trans}}</a></li>
         {% endif %}
       </ul>
     </div>
