--- a/src/Topxia/WebBundle/Resources/views/PayCenter/course-order.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/PayCenter/course-order.html.twig
@@ -9,7 +9,7 @@
       <p>{{'订单号：%sn%'|trans({'%sn%': order.sn})}}</p>
       <p>
         {{'订单价格：'|trans}}
-        <span class="pay-rmb">{{'￥'|trans}}{{order.amount}}</span>
+        <span class="pay-rmb">￥{{order.amount}}</span>
       </p>
     </div>
   </div>
