--- a/src/Topxia/AdminBundle/Resources/views/Coin/cash-bill.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Coin/cash-bill.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
-{% set menu = 'admin_cash_bill' %}
+{% set menu = 'admin_bill' %}
 
 {% block main %}
 
