--- a/src/Topxia/WebBundle/Resources/views/Group/thread.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Group/thread.html.twig
@@ -332,7 +332,7 @@
           <div>
             <a class="gray-darker">{{ web_macro.user_link(owner)}}</a>
           </div>
-          <span class="text-sm gray-medium">{{'%title%'|trans({'%title%': owner.title|default('无'|trans)})}}</span>
+          <span class="text-sm gray-medium">{{ owner.title|default('无'|trans) }}</span>
         </div>
       </div>
     </div>
