--- a/src/Topxia/WebBundle/Resources/views/User/header-block.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/User/header-block.html.twig
@@ -26,7 +26,7 @@
         {% endif %}
       </div>
       <div class="mates">
-        <span class="mrm">{{follower|default(0)}}</span>粉丝<span class="mlm mrm">｜</span><span class="mrm">{{following|default(0)}}</span>{{'关注'|trans}}
+        <span class="mrm">{{follower|default(0)}}</span>{{'粉丝'|trans}}<span class="mlm mrm">｜</span><span class="mrm">{{following|default(0)}}</span>{{'关注'|trans}}
       </div>
       {% if (not app.user) or (app.user.id != user.id) %}
         <div class="actions">
