--- a/src/Topxia/WebBundle/Resources/views/Settings/email.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Settings/email.html.twig
@@ -38,7 +38,7 @@
         </div>
 
         <div class="form-group">
-          <div class="col-md-2 control-label">{{ form_label(form.email, '新登录邮箱'|trans) }}</div>
+          <div class="col-md-2 control-label" for="{{ '新登录邮箱'|trans }}">{{ form_label(form.email, '新登录邮箱'|trans) }}</div>
           <div class="col-md-8 controls">
             {{ form_widget(form.email, {attr:{class:'form-control'}}) }}
           </div>
