--- a/src/Topxia/WebBundle/Resources/views/Thread/create.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Thread/create.html.twig
@@ -96,7 +96,7 @@
     
   </div>
    {% if type != 'event' %}
-      {{ render(controller('TopxiaWebBundle:Attachment:formFields', {targetType: 'classroom.thread', targetId: thread.id|default(0)})) }}
+      {{ render(controller('TopxiaWebBundle:Attachment:formFields', {targetType: 'classroom.thread', targetId: thread.id|default(0)}, {'showLabel':false})) }}
     {% endif %}
   <div class="clearfix">
       {% if thread %}
