--- a/src/Topxia/WebBundle/Resources/views/CourseThread/post.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseThread/post.html.twig
@@ -25,7 +25,7 @@
     </div>
   </div>
 
-  {{ render(controller('TopxiaWebBundle:Attachment:formFields', {targetType: 'course.thread.post', targetId: 0})) }}
+  {{ render(controller('TopxiaWebBundle:Attachment:formFields', {targetType: 'course.thread.post', targetId: 0}, {'showLabel':false})) }}
 
   <div class="form-group">
     <div class="controls clearfix">
