--- a/src/Topxia/WebBundle/Resources/views/Attachment/form-fields.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Attachment/form-fields.html.twig
@@ -1,25 +1,30 @@
 {% if setting('cloud_attachment.enable') and setting('cloud_attachment.' ~ target ) %}
   {% set ids_class  = (useType == true) ? 'js-attachment-ids-'~type  : 'js-attachment-ids'%}
   {% set list_class  = (useType == true) ? 'js-attachment-list-'~type  : 'js-attachment-list'%}
+  {% set reupload = attachments|default(null)|length %}
   {% do load_script('topxiawebbundle/controller/attachment/upload-form') %}
   <div class="form-group">
-    <label class="col-xs-2 control-label" for="thread_title">{{ '附件'|trans }}</label>
-    <div class="col-xs-7 controls">
-    <!-- <div class="controls"> -->
+    {% if showLabel|default(false) %}
+      <label class="col-xs-2 control-label" for="thread_title">{{ '附件'|trans }}</label>
+      <div class="col-xs-7 controls">
+    {% else %}
+      <div class="controls"> 
+    {% endif %}
       <div class="{{list_class}}" style="inline-height:60px">
         {% for attachment in attachments %}
           <div class="well well-sm">
-            <img class="mrm" src="{{ asset('assets/img/default/cloud_' ~ attachment.file.type ~ '.png') }}" height="60px">
+            <img class="mrm" src="{{ asset('assets/img/default/cloud_' ~ attachment.file.type ~ '.png') }}" height="60px" width="107px">
             {{ attachment.file.filename }}
             <button class="btn btn-link js-attachment-delete pull-right" data-url="{{path('attachment_delete',{id:attachment.id})  }}" type="button" style="margin-top:13px">删除</button> 
+             <a class="btn btn-link pull-right" style="margin-top:13px" href="#modal" data-toggle="modal" data-url="{{ path('attachment_preview', {'id': attachment.id}) }}">预览</a>
           </div>
         {% endfor %}
       </div>
-      <a class="btn btn-primary js-upload-file" data-toggle="modal" data-backdrop="static"
+      <a class="btn btn-primary js-upload-file  {% if reupload %} hidden {% endif %}" data-toggle="modal" data-backdrop="static"
          data-target="#modal"
          data-url="{{ path('attachment_upload', {idsClass: ids_class, listClass : list_class, token:uploader_token('attachment', app.user.id, 'private')}) }}"
-         title="上传附件" data-placement="bottom" data-title="上传附件" data-reupload-title="重新上传">
-        上传附件
+         title="上传附件" data-placement="bottom" data-title="上传附件">
+         上传附件
       </a>
     </div>
     {# 应该标记该附件是否新增,或者修改 #}
