--- a/src/Topxia/WebBundle/Resources/views/Attachment/form-fields.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Attachment/form-fields.html.twig
@@ -11,7 +11,7 @@
       <div class="controls"> 
     {% endif %}
       <div class="{{list_class}}" style="inline-height:60px">
-        {% for attachment in attachments %}
+        {% for attachment in attachments  if attachment.file %}
           <div class="well well-sm">
             <img class="mrm" src="{{ asset('assets/img/default/cloud_' ~ attachment.file.type ~ '.png') }}" height="60px" width="107px">
             {{ attachment.file.filename }}
