--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/video.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/video.html.twig
@@ -456,7 +456,7 @@
     <div class="row form-group">
       <div class="col-md-3 control-label"></div>
       <div class="controls col-md-8">
-        <button type="submit" class="btn btn-primary">提交</button>
+        <button type="submit" id="cloud-video-form-btn" class="btn btn-primary" data-submiting-text="{{'正在提交'|trans}}">提交</button>
       </div>
     </div>
 
