--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/video.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/video.html.twig
@@ -381,7 +381,7 @@
     </div>
     <div class="row form-group" >
       <div class="col-md-3 control-label">
-        <label>云视频指纹显示时间</label>
+        <label>云视频指纹显示时长</label>
       </div>  
       <div class="controls col-md-8">
         <input type="text" id="video_fingerprint_time" class="form-control width-input width-input-small" name="video_fingerprint_time" value="{{ storageSetting.video_fingerprint_time }}"> 秒
