--- a/src/Topxia/WebBundle/Resources/views/CourseLesson/Part/lesson.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLesson/Part/lesson.html.twig
@@ -9,17 +9,17 @@
       <a {% if member %}href="{{ lessonUrl }}" {% else %}href="#modal" data-toggle="modal" data-url="{{ lessonUrl }}"{% endif %}
       title="{{ item.title }}">
       {% include 'TopxiaWebBundle:CourseLesson/Part:status-ball.html.twig' %}
-      <span class="title">  {% if setting('course.custom_chapter_enabled')|default(true) %} 课时{{ item.number }}：{% endif %}{{ item.title|raw }}</span>
+      <span class="title">  {% if setting('course.custom_chapter_enabled')|default(true) %} {{'课时'|trans}}{{ item.number }}：{% endif %}{{ item.title|raw }}</span>
       {% include 'TopxiaWebBundle:CourseLesson/Part:micro-tips.html.twig' %}
       </a>
     {% else %}
       {% include 'TopxiaWebBundle:CourseLesson/Part:status-ball.html.twig' %}
-      <span class="title">  {% if setting('course.custom_chapter_enabled')|default(true) %} 课时{{ item.number }}：{% endif %}{{ item.title|raw }}</span>
+      <span class="title">  {% if setting('course.custom_chapter_enabled')|default(true) %} {{'课时'|trans}}{{ item.number }}：{% endif %}{{ item.title|raw }}</span>
       {% include 'TopxiaWebBundle:CourseLesson/Part:micro-tips.html.twig' %}
     {% endif %}
   {% else %}
     {% include 'TopxiaWebBundle:CourseLesson/Part:status-ball.html.twig' %}
-    <span class="title">{% if setting('course.custom_chapter_enabled')|default(true) %} 课时{{ item.number }}：{% endif %}{{ item.title|raw }}</span>
+    <span class="title">{% if setting('course.custom_chapter_enabled')|default(true) %} {{'课时'|trans}}{{ item.number }}：{% endif %}{{ item.title|raw }}</span>
     {% include 'TopxiaWebBundle:CourseLesson/Part:micro-tips.html.twig' %}
   {% endif %}
 </li>
