--- a/src/Topxia/AdminBundle/Resources/views/Coin/coin-course-set.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Coin/coin-course-set.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
-{% set menu = 'admin_coin_model' %}
+{% set menu = 'admin_coin_settings' %}
 
 {% set script_controller = "coin/save" %}
 {% block main %}
