--- a/src/Topxia/WebBundle/Resources/views/CourseStudentManage/index.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseStudentManage/index.html.twig
@@ -19,7 +19,11 @@
       {% else %}
         <a class="btn btn-info pull-right btn-sm mhs" disabled data-toggle="tooltip" data-placement="top" title="课程未发布,不可导入学员"><i class="glyphicon glyphicon-import"></i> {{'批量导入'|trans}}</a>
       {% endif %}
-      <button class="btn btn-info btn-sm pull-right mhs" id="student-add-btn" data-toggle="modal" data-target="#modal" data-url="{{ path('course_manage_student_create', {id:course.id}) }}"><i class="glyphicon glyphicon-plus"></i> {{'添加'|trans}}{% if setting('default.user_name') %}{{setting('default.user_name')|default('学员'|trans)}}{% else %}{{'学员'|trans}}{% endif %}</button>
+
+      {% if has_permission('course_manage_student_create') %}
+        <button class="btn btn-info btn-sm pull-right mhs" id="student-add-btn" data-toggle="modal" data-target="#modal" data-url="{{ path('course_manage_student_create', {id:course.id}) }}"><i class="glyphicon glyphicon-plus"></i> {{'添加'|trans}}{% if setting('default.user_name') %}{{setting('default.user_name')|default('学员'|trans)}}{% else %}{{'学员'|trans}}{% endif %}</button>
+      {% endif %}
+      
     {% endif %}
     {% endif %}
   </div>
