--- a/src/SensitiveWord/SensitiveWordBundle/Resources/views/SensitiveAdmin/banlogs.html.twig
+++ b/src/SensitiveWord/SensitiveWordBundle/Resources/views/SensitiveAdmin/banlogs.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
-{% set menu = 'admin_operation_keyword_banlogs' %}
+{% set menu = 'admin_keyword_banlogs' %}
 
 {% block main %}
 	<form id="banlog-search-form" class="form-inline well well-sm" action="" method="get">
