--- a/src/SensitiveWord/SensitiveWordBundle/Resources/views/SensitiveAdmin/index.html.twig
+++ b/src/SensitiveWord/SensitiveWordBundle/Resources/views/SensitiveAdmin/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
-{% set menu = 'admin_operation_keyword_set' %}
+{% set menu = 'admin_keyword' %}
 
 
 {% set script_controller = 'sensitivewordbundle/keyword/list' %}
