--- a/web/assets/v2/css/main-red-light.css
+++ b/web/assets/v2/css/main-red-light.css
@@ -9699,6 +9699,7 @@ textarea {
   height: 40px;
   line-height: 40px;
   float: left;
+  width: 66%;
 }
 .lesson-list .item-actions {
   visibility: hidden;
