--- a/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/flag.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/flag.html.twig
@@ -1,11 +1,12 @@
 {% set favorites = favorites|default([]) %}
+{% set resultStatus = resultStatus|default(null) %}
 
 {% if 'mark' in flags and id|default(null) %}
   <a class="btn btn-link btn-muted btn-sm marking text-muted"><span class="glyphicon glyphicon-bookmark text-muted"></span> {{'标记'|trans}}</a>
   <a class="btn btn-link btn-sm unMarking" style="display:none"><span class="glyphicon glyphicon-bookmark"></span> {{'取消标记'|trans}}</a>
 {% endif %}
 
-{% if 'favorite' in flags and id|default(null) %}
+{% if 'favorite' in flags and id|default(null) and resultStatus != 'doing' %}
   <button data-url="{{ path('my_favorite_question', {id:item.question.id, targetType:'testpaper', targetId:paper.id}) }}" class="btn btn-sm btn-default favorite-btn" {% if item.question.id in favorites %}style="display:none"{% endif %}><span class="glyphicon glyphicon-star-empty"></span> {{'收藏'|trans}}</button>
   <button data-url="{{ path('my_unfavorite_question', {id:item.question.id, targetType:'testpaper', targetId:paper.id}) }}" class="btn btn-link btn-sm unfavorite-btn" {% if item.question.id not in favorites %}style="display:none"{% endif %}><span class="glyphicon glyphicon-star"></span> {{'取消收藏'|trans}}</button>
 {% endif %}
