course-period-of-validity

--- a/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header.html.twig
@@ -57,7 +57,8 @@
       {% if member and member.deadline > 0 %}
         {% if member.deadline > 'now'|date('U') %}
           <p class="expiry-date hidden-sm">
-            <label for="">有效期</label><span>还有{{ member.deadline|remain_time }}</span>
+            <span class="mrm">有效期至</span>
+            <span>{{ member.deadline|date('Y年m月d日 h小时i分') }}</span>
           </p>
         {% else %}
          <div class="alert alert-danger alert-dismissable">
